Add delete and unpause actions for paused requests (Resolves #27 and #28)
@wsorenson did not test this b/c there are no paused requests atm. If you create a few I'll double check this actually works. =)

--- a/SingularityUI/app/views/templates/requestsPaused.hbs
+++ b/SingularityUI/app/views/templates/requestsPaused.hbs
@@ -30,7 +30,9 @@
                                 <td>
                                     <a data-request-id="{{ id }}" class="dont-route view-json">JSON</a>
                                     &nbsp;&nbsp;
-                                    <a data-request-id="{{ id }}" class="dont-route" data-action="remove" data-url="{{ url }}">Remove</a>
+                                    <a data-request-id="{{ id }}" class="dont-route" data-action="deletePaused">Remove</a>
+                                    &nbsp;&nbsp;
+                                    <a data-request-id="{{ id }}" class="dont-route" data-action="unpause">Unpause</a>
                                 </td>
                             </tr>
                         {{/eachWithFn}}
@@ -65,7 +67,9 @@
                                 <td>
                                     <a data-request-id="{{ id }}" class="dont-route view-json">JSON</a>
                                     &nbsp;&nbsp;
-                                    <a data-request-id="{{ id }}" class="dont-route" data-action="remove" data-url="{{ url }}">Remove</a>
+                                    <a data-request-id="{{ id }}" class="dont-route" data-action="deletePaused">Remove</a>
+                                    &nbsp;&nbsp;
+                                    <a data-request-id="{{ id }}" class="dont-route" data-action="unpause">Unpause</a>
                                 </td>
                             </tr>
                         {{/eachWithFn}}
