--- a/SingularityUI/app/views/templates/requestsPaused.hbs
+++ b/SingularityUI/app/views/templates/requestsPaused.hbs
@@ -28,11 +28,11 @@
                                 <td>{{ deployUser }}</td>
                                 <td>{{ instances }}</td>
                                 <td>
-                                    <a data-request-id="{{ id }}" class="dont-route view-json">JSON</a>
+                                    <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
                                     &nbsp;&nbsp;
-                                    <a data-request-id="{{ id }}" class="dont-route" data-action="deletePaused">Remove</a>
+                                    <a data-request-id="{{ id }}" data-action="deletePaused">Remove</a>
                                     &nbsp;&nbsp;
-                                    <a data-request-id="{{ id }}" class="dont-route" data-action="unpause">Unpause</a>
+                                    <a data-request-id="{{ id }}" data-action="unpause">Unpause</a>
                                 </td>
                             </tr>
                         {{/eachWithFn}}
@@ -65,11 +65,11 @@
                                 <td>{{ deployUser }}</td>
                                 <td>{{ schedule }}</td>
                                 <td>
-                                    <a data-request-id="{{ id }}" class="dont-route view-json">JSON</a>
+                                    <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
                                     &nbsp;&nbsp;
-                                    <a data-request-id="{{ id }}" class="dont-route" data-action="deletePaused">Remove</a>
+                                    <a data-request-id="{{ id }}" data-action="deletePaused">Remove</a>
                                     &nbsp;&nbsp;
-                                    <a data-request-id="{{ id }}" class="dont-route" data-action="unpause">Unpause</a>
+                                    <a data-request-id="{{ id }}" data-action="unpause">Unpause</a>
                                 </td>
                             </tr>
                         {{/eachWithFn}}
