--- a/SingularityUI/app/views/templates/tasksCleaning.hbs
+++ b/SingularityUI/app/views/templates/tasksCleaning.hbs
@@ -19,7 +19,7 @@
                         <tr data-task-id="{{ id }}">
                             <td><a title="{{ id }}" href="/singularity/task/{{ id }}" data-route="task/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></td>
                             <td>{{ cleanupTypeHuman }}</span></td>
-                            <td><a data-task-id="{{ id }}" class="dont-route view-json">JSON</a></td>
+                            <td><a data-task-id="{{ id }}" data-action="viewJSON">JSON</a></td>
                         </tr>
                     {{/eachWithFn}}
                 </tbody>
