--- a/SingularityUI/app/views/templates/tasksScheduled.hbs
+++ b/SingularityUI/app/views/templates/tasksScheduled.hbs
@@ -20,9 +20,9 @@
                             <td><span title="{{ id }}">{{#hardBreak name}}{{/hardBreak}}</span></td>
                             <td data-value="{{ nextRunAt}}"><span title="{{ nextRunAt }}">{{ nextRunAtHuman }}</span></td>
                             <td>
-                                <a data-task-id="{{ id }}" class="dont-route view-json">JSON</a>
+                                <a data-task-id="{{ id }}" data-action="viewJSON">JSON</a>
                                 &nbsp;&nbsp;
-                                <a data-task-id="{{ id }}" class="dont-route" data-action="run-now" data-url="{{ url }}">Run now</a>
+                                <a data-task-id="{{ id }}" data-action="run-now" data-url="{{ url }}">Run now</a>
                             </td>
                         </tr>
                     {{/eachWithFn}}
