--- a/SingularityUI/app/views/templates/tasksCleaning.hbs
+++ b/SingularityUI/app/views/templates/tasksCleaning.hbs
@@ -3,6 +3,24 @@
 </header>
 
 <section>
+    <div class="row-fluid">
+        <div class="span12">
+            <ul class="nav nav-tabs">
+                <li>
+                    <a href="/singularity/tasks" data-route="tasks">Active</a>
+                </li>
+                <li>
+                    <a href="/singularity/tasks/scheduled" data-route="tasks/scheduled">Scheduled</a>
+                </li>
+                <li class="active">
+                    <a href="/singularity/tasks/cleaning" data-route="tasks/cleaning">Cleaning</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
+
+<section>
     <input type="search" placeholder="Filter tasks..." required />
     <div class="row-fluid">
         <div class="span12">
