Remove sort on search tables since its misleading

--- a/SingularityUI/app/views/templates/searchResults.hbs
+++ b/SingularityUI/app/views/templates/searchResults.hbs
@@ -2,7 +2,7 @@
     {{#if requestsResults}}
         <div class="row-fluid">
             <h2>Requests</h2>
-            <table class="table" data-sortable>
+            <table class="table">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -32,7 +32,7 @@
     {{#if tasksResults}}
         <div class="row-fluid">
             <h2>Tasks</h2>
-            <table class="table" data-sortable>
+            <table class="table">
                 <thead>
                     <tr>
                         <th>Name</th>
