Beginnings of paginated request task history

--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -45,7 +45,9 @@
             <div class="page-loader centered"></div>
         {{/if}}
     {{/if}}
+</section>
 
+<section>
     <div class="page-header">
         <h1>Scheduled Tasks</h1>
     </div>
@@ -75,7 +77,9 @@
     {{else}}
         <center><p>No scheduled tasks.</p></center>
     {{/if}}
+</section>
 
+<section>
     <div class="page-header">
         <h1>Historical Tasks <small>Last 100</small></h1>
     </div>
@@ -117,4 +121,11 @@
             <div class="page-loader centered"></div>
         {{/if}}
     {{/if}}
+</section>
+
+<section>
+    <div class="page-header">
+        <h1>Historical Tasks (Paginated – work in progress...)</h1>
+    </div>
+    <div class="historical-tasks-paginated"></div>
 </section>
