--- a/SingularityUI/app/styles/main.styl
+++ b/SingularityUI/app/styles/main.styl
@@ -3,6 +3,14 @@
 a
     cursor pointer
 
+a.disabled
+    cursor none
+    pointer-events none
+    color #999
+
+a.disabled:hover
+    background-color transparent
+
 .link-spacer
     opacity 0.2
     padding 0px 5px
