--- a/SingularityUI/app/views/templates/tasksActive.hbs
+++ b/SingularityUI/app/views/templates/tasksActive.hbs
@@ -24,36 +24,40 @@
     <input type="search" placeholder="Filter tasks..." required />
     <div class="row-fluid">
         <div class="span12">
-            <table class="table" data-sortable>
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Started</th>
-                        <th>Host</th>
-                        <th>Rack</th>
-                        <th>CPUs</th>
-                        <th>Memory</th>
-                        <th data-sortable="false"></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{#eachWithFn tasks}}
-                        <tr data-task-id="{{ id }}">
-                            <td><a title="{{ id }}" href="/singularity/task/{{ id }}" data-route="task/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></td>
-                            <td data-value="{{ startedAt }}"><span title="{{ startedAt }}">{{ startedAtHuman }}</span></td>
-                            <td>{{ host }}</td>
-                            <td>{{ rack }}</td>
-                            <td>{{ resources.cpus }}</td>
-                            <td data-value="{{ resources.memoryMb }}">{{ memoryHuman }}</td>
-                            <td>
-                                <a data-task-id="{{ id }}" data-action="viewJSON">JSON</a>
-                                &nbsp;&nbsp;
-                                <a data-task-id="{{ id }}" data-action="remove" data-url="{{ url }}">Remove</a>
-                            </td>
+            {{#if tasks.length}}
+                <table class="table" data-sortable>
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Started</th>
+                            <th>Host</th>
+                            <th>Rack</th>
+                            <th>CPUs</th>
+                            <th>Memory</th>
+                            <th data-sortable="false"></th>
                         </tr>
-                    {{/eachWithFn}}
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody>
+                        {{#eachWithFn tasks}}
+                            <tr data-task-id="{{ id }}">
+                                <td><a title="{{ id }}" href="/singularity/task/{{ id }}" data-route="task/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></td>
+                                <td data-value="{{ startedAt }}"><span title="{{ startedAt }}">{{ startedAtHuman }}</span></td>
+                                <td>{{ host }}</td>
+                                <td>{{ rack }}</td>
+                                <td>{{ resources.cpus }}</td>
+                                <td data-value="{{ resources.memoryMb }}">{{ memoryHuman }}</td>
+                                <td>
+                                    <a data-task-id="{{ id }}" data-action="viewJSON">JSON</a>
+                                    &nbsp;&nbsp;
+                                    <a data-task-id="{{ id }}" data-action="remove" data-url="{{ url }}">Remove</a>
+                                </td>
+                            </tr>
+                        {{/eachWithFn}}
+                    </tbody>
+                </table>
+            {{else}}
+                <center><p>No active tasks.</p></center>
+            {{/if}}
         </div>
     </div>
 </section>
