--- a/SingularityUI/app/views/templates/tasksScheduled.hbs
+++ b/SingularityUI/app/views/templates/tasksScheduled.hbs
@@ -24,28 +24,32 @@
     <input type="search" placeholder="Filter tasks..." required />
     <div class="row-fluid">
         <div class="span12">
-            <table class="table" data-sortable>
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Next run</th>
-                        <th data-sortable="false"></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{#eachWithFn tasks}}
-                        <tr data-task-id="{{ id }}">
-                            <td><span title="{{ id }}">{{#hardBreak name}}{{/hardBreak}}</span></td>
-                            <td data-value="{{ nextRunAt}}"><span title="{{ nextRunAt }}">{{ nextRunAtHuman }}</span></td>
-                            <td>
-                                <a data-task-id="{{ id }}" data-action="viewJSON">JSON</a>
-                                &nbsp;&nbsp;
-                                <a data-task-id="{{ id }}" data-action="run-now" data-url="{{ url }}">Run now</a>
-                            </td>
+            {{#if tasks.length}}
+                <table class="table" data-sortable>
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Next run</th>
+                            <th data-sortable="false"></th>
                         </tr>
-                    {{/eachWithFn}}
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody>
+                        {{#eachWithFn tasks}}
+                            <tr data-task-id="{{ id }}">
+                                <td><span title="{{ id }}">{{#hardBreak name}}{{/hardBreak}}</span></td>
+                                <td data-value="{{ nextRunAt}}"><span title="{{ nextRunAt }}">{{ nextRunAtHuman }}</span></td>
+                                <td>
+                                    <a data-task-id="{{ id }}" data-action="viewJSON">JSON</a>
+                                    &nbsp;&nbsp;
+                                    <a data-task-id="{{ id }}" data-action="run-now" data-url="{{ url }}">Run now</a>
+                                </td>
+                            </tr>
+                        {{/eachWithFn}}
+                    </tbody>
+                </table>
+            {{else}}
+                <center><p>No scheduled tasks.</p></center>
+            {{/if}}
         </div>
     </div>
 </section>
