--- a/SingularityUI/app/styles/tailer.styl
+++ b/SingularityUI/app/styles/tailer.styl
@@ -1,3 +1,8 @@
-.tailer
-	height 500px
-	overflow scroll
+.lines
+    font-family Consolas, "Liberation Mono", Courier, monospace
+    overflow scroll
+    height 500px
+
+    .line
+        width 100%
+        white-space nowrap
