--- a/SingularityUI/app/views/templates/tail.hbs
+++ b/SingularityUI/app/views/templates/tail.hbs
@@ -5,8 +5,6 @@
 
 <section>
     <div class="row-fluid">
-        <div class="span12">
-        	<pre class="tailer"></pre>
-        </div>
+        <div class="span12 tail-container">Loading...</div>
     </div>
 </section>
