Allow removal of dead slaves/racks from UI (Closes #34)

--- a/SingularityUI/app/views/templates/racks.hbs
+++ b/SingularityUI/app/views/templates/racks.hbs
@@ -44,6 +44,7 @@
                         <tr>
                             <th>ID</th>
                             <th>State</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -51,6 +52,7 @@
                             <tr>
                                 <td>{{ id }}</td>
                                 <td>{{ state }}</td>
+                                <td><a data-rack-id="{{ id }}" data-action="remove">Remove</a>
                             </tr>
                         {{/eachWithFn}}
                     </tbody>
