--- a/SingularityUI/app/views/templates/searchResults.hbs
+++ b/SingularityUI/app/views/templates/searchResults.hbs
@@ -1,7 +1,9 @@
 <section>
     {{#if requestsResults}}
+        <div class="page-header">
+            <h1>Requests</h1>
+        </div>
         <div class="row-fluid">
-            <h2>Requests</h2>
             <table class="table">
                 <thead>
                     <tr>
@@ -30,8 +32,10 @@
 
 <section>
     {{#if tasksResults}}
+        <div class="page-header">
+            <h1>Tasks</h1>
+        </div>
         <div class="row-fluid">
-            <h2>Tasks</h2>
             <table class="table">
                 <thead>
                     <tr>
