--- a/SingularityUI/app/views/templates/tail.hbs
+++ b/SingularityUI/app/views/templates/tail.hbs
@@ -1,6 +1,6 @@
 <header class="jumbotron subhead" id="overview">
-    <h1>{{#hardBreak taskHistory.task.name}}{{/hardBreak}}</h1>
-    <p class="lead">{{#hardBreak path}}{{/hardBreak}}</p>
+    <h3><a href="/singularity/task/{{ taskId }}" data-route="task/{{ taskId }}">{{#hardBreak taskId}}{{/hardBreak}}</a></h3>
+    <h1><a href="/singularity/task/{{ taskId }}/files/" data-route="task/{{ taskId }}/files/">...</a>/{{#each subfolders}}<a href="/singularity/task/{{ ../taskId }}/files/{{ fullPath }}" data-route="task/{{ ../taskId }}/files/{{ fullPath }}">{{name}}</a>/{{/each}}{{#hardBreak filename }}{{/hardBreak}}</h1>
 </header>
 
 <section>
