--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -103,7 +103,11 @@
                             <tr data-task-id="{{ id }}">
                                 <td><span title="{{ id }}">{{#hardBreak name}}{{/hardBreak}}</span></td>
                                 <td data-value="{{ nextRunAt }}"><span title="{{ nextRunAt }}">{{ nextRunAtHuman }}</span></td>
-                                <td><a data-task-id="{{ id }}" data-action="viewJSON">JSON</a></td>
+                                <td>
+                                    <a data-task-id="{{ id }}" data-action="viewJSON">JSON</a>
+                                    &nbsp;&nbsp;
+                                    <a data-task-id="{{ id }}" data-action="run-now" data-url="{{ url }}">Run now</a>
+                                </td>
                             </tr>
                         {{/eachWithFn}}
                     </tbody>
