addressing PR feedback

--- a/SingularityUI/app/styles/tailer.styl
+++ b/SingularityUI/app/styles/tailer.styl
@@ -1,8 +1,11 @@
-.lines
+.tail-container
     font-family Consolas, "Liberation Mono", Courier, monospace
     overflow scroll
     height 500px
 
-    .line
+    > div
         width 100%
-        white-space nowrap
+        white-space pre
+
+        &:hover
+            background #eee
