change singularity task link

--- a/SingularityService/src/main/resources/templates/task_failed.html
+++ b/SingularityService/src/main/resources/templates/task_failed.html
@@ -3,5 +3,5 @@
 <br>
 {{ task_id }} failed with status {{ status }} <br>
 <br>
-<a href="{{ mesos_logs_link }}">Click here to view the logs in Mesos</a>.
+<a href="{{ singularity_task_link }}">Click here to view the task and logs in Singularity</a>.
 <br>
