--- a/SingularityUI/app/views/templates/tasksActive.hbs
+++ b/SingularityUI/app/views/templates/tasksActive.hbs
@@ -49,7 +49,7 @@
                                 <td>
                                     <a data-task-id="{{ id }}" data-action="viewJSON">JSON</a>
                                     &nbsp;&nbsp;
-                                    <a data-task-id="{{ id }}" data-action="remove" data-url="{{ url }}">Remove</a>
+                                    <a data-task-id="{{ id }}" data-action="remove" data-url="{{ url }}">Kill&nbsp;Task</a>
                                 </td>
                             </tr>
                         {{/eachWithFn}}
