--- a/SingularityUI/app/views/templates/tasksScheduled.hbs
+++ b/SingularityUI/app/views/templates/tasksScheduled.hbs
@@ -41,7 +41,7 @@
                                 <td>
                                     <a data-task-id="{{ id }}" data-action="viewJSON">JSON</a>
                                     &nbsp;&nbsp;
-                                    <a data-task-id="{{ id }}" data-action="run-now" data-url="{{ url }}">Run now</a>
+                                    <a data-task-id="{{ id }}" data-action="run-now">Run now</a>
                                 </td>
                             </tr>
                         {{/eachWithFn}}
