--- a/SingularityUI/app/views/templates/files.hbs
+++ b/SingularityUI/app/views/templates/files.hbs
@@ -4,6 +4,16 @@
 </header>
 
 <section>
+    <ol class="breadcrumb">
+        {{#eachWithFn breadcrumbs}}
+            {{#if _last}}
+                <li class="active">{{ path }}</li>
+            {{else}}
+                <li><a href="/singularity/{{ pathRoute }}" data-route="{{ pathRoute }}">{{ path }}</a></li>
+            {{/if}}
+        {{/eachWithFn}}
+    </ol>
+
     <div class="row-fluid">
         <div class="span12">
             {{> filesTable}}
