--- a/SingularityUI/app/views/templates/filesTable.hbs
+++ b/SingularityUI/app/views/templates/filesTable.hbs
@@ -1,28 +1,32 @@
-<table class="table" data-sortable>
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Size</th>
-            <th>Last modified</th>
-            <th data-sortable="false"></th>
-        </tr>
-    </thead>
-    <tbody>
-        {{#eachWithFn taskFiles}}
+{{#if taskFiles}}
+    <table class="table" data-sortable>
+        <thead>
             <tr>
-                <td>
-                    {{#if isDirectory}}
-                        <a href="/singularity/task/{{ taskId }}/files{{ relPath }}" data-route="/task/{{ taskId }}/files{{ relPath }}">{{ shortPath }}</a>
-                    {{else}}
-                        <a href="/singularity/task/{{ taskId }}/tail{{ relPath }}" data-route="/task/{{ taskId }}/tail{{ relPath }}">{{ shortPath }}</a>
-                    {{/if}}
-                </td>
-                <td data-value="{{ size }}">{{ sizeHuman }}</td>
-                <td data-value="{{ mtime }}"><span title="{{ mtime }}">{{ mtimeHuman }}</span></td>
-                <td>
-                    {{#unless isDirectory}}<a href="{{ downloadLink }}" target="_blank">Download</a>{{/unless}}
-                </td>
+                <th>Name</th>
+                <th>Size</th>
+                <th>Last modified</th>
+                <th data-sortable="false"></th>
             </tr>
-        {{/eachWithFn}}
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            {{#eachWithFn taskFiles}}
+                <tr>
+                    <td>
+                        {{#if isDirectory}}
+                            <a href="/singularity/task/{{ taskId }}/files{{ relPath }}" data-route="/task/{{ taskId }}/files{{ relPath }}">{{ shortPath }}</a>
+                        {{else}}
+                            <a href="/singularity/task/{{ taskId }}/tail{{ relPath }}" data-route="/task/{{ taskId }}/tail{{ relPath }}">{{ shortPath }}</a>
+                        {{/if}}
+                    </td>
+                    <td data-value="{{ size }}">{{ sizeHuman }}</td>
+                    <td data-value="{{ mtime }}"><span title="{{ mtime }}">{{ mtimeHuman }}</span></td>
+                    <td>
+                        {{#unless isDirectory}}<a href="{{ downloadLink }}" target="_blank">Download</a>{{/unless}}
+                    </td>
+                </tr>
+            {{/eachWithFn}}
+        </tbody>
+    </table>
+{{else}}
+    <center><p>This directory contains no files.</p></center>
+{{/if}}
