Align-right all actions columns

--- a/SingularityUI/app/styles/table.styl
+++ b/SingularityUI/app/styles/table.styl
@@ -15,3 +15,13 @@ html.darkstrip
 
     td > span
         white-space nowrap
+
+.table, table, table[data-sortable]
+
+    th, td
+
+        &.actions-column
+            text-align right
+
+            a
+                margin-left 10px
