--- a/SingularityUI/app/views/templates/requestsActive.hbs
+++ b/SingularityUI/app/views/templates/requestsActive.hbs
@@ -53,9 +53,8 @@
                                 <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
                                 <td>{{ deployUser }}</td>
                                 <td>{{ instances }}</td>
-                                <td>
+                                <td class="actions-column">
                                     <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
-                                    &nbsp;&nbsp;
                                     <a data-request-id="{{ id }}" data-action="remove">Remove</a>
                                 </td>
                             </tr>
@@ -93,9 +92,8 @@
                                 <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
                                 <td>{{ deployUser }}</td>
                                 <td>{{ schedule }}</td>
-                                <td>
+                                <td class="actions-column">
                                     <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
-                                    &nbsp;&nbsp;
                                     <a data-request-id="{{ id }}" data-action="remove">Remove</a>
                                 </td>
                             </tr>
