--- a/SingularityUI/app/views/templates/requestsPaused.hbs
+++ b/SingularityUI/app/views/templates/requestsPaused.hbs
@@ -53,11 +53,9 @@
                                 <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
                                 <td>{{ deployUser }}</td>
                                 <td>{{ instances }}</td>
-                                <td>
+                                <td class="actions-column">
                                     <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
-                                    &nbsp;&nbsp;
                                     <a data-request-id="{{ id }}" data-action="deletePaused">Remove</a>
-                                    &nbsp;&nbsp;
                                     <a data-request-id="{{ id }}" data-action="unpause">Unpause</a>
                                 </td>
                             </tr>
@@ -95,11 +93,9 @@
                                 <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
                                 <td>{{ deployUser }}</td>
                                 <td>{{ schedule }}</td>
-                                <td>
+                                <td class="actions-column">
                                     <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
-                                    &nbsp;&nbsp;
                                     <a data-request-id="{{ id }}" data-action="deletePaused">Remove</a>
-                                    &nbsp;&nbsp;
                                     <a data-request-id="{{ id }}" data-action="unpause">Unpause</a>
                                 </td>
                             </tr>
