--- a/SingularityUI/app/views/templates/racks.hbs
+++ b/SingularityUI/app/views/templates/racks.hbs
@@ -52,7 +52,7 @@
                             <tr>
                                 <td>{{ id }}</td>
                                 <td>{{ state }}</td>
-                                <td><a data-rack-id="{{ id }}" data-action="remove">Remove</a>
+                                <td class="actions-column"><a data-rack-id="{{ id }}" data-action="remove">Remove</a>
                             </tr>
                         {{/eachWithFn}}
                     </tbody>
