--- a/SingularityUI/app/views/templates/tasksActive.hbs
+++ b/SingularityUI/app/views/templates/tasksActive.hbs
@@ -46,9 +46,8 @@
                                 <td>{{ rack }}</td>
                                 <td>{{ resources.cpus }}</td>
                                 <td data-value="{{ resources.memoryMb }}">{{ memoryHuman }}</td>
-                                <td>
+                                <td class="actions-column">
                                     <a data-task-id="{{ id }}" data-action="viewJSON">JSON</a>
-                                    &nbsp;&nbsp;
                                     <a data-task-id="{{ id }}" data-action="remove">Kill&nbsp;Task</a>
                                 </td>
                             </tr>
