--- a/SingularityUI/app/views/templates/dashboard.hbs
+++ b/SingularityUI/app/views/templates/dashboard.hbs
@@ -4,200 +4,60 @@
 
 <section>
     <div class="page-header">
-        <h1>Hosts</h1>
+        <h1>Starred Requests</h1>
     </div>
     <div class="row-fluid">
-        <table class="table" data-sortable>
-            <thead>
-                <tr>
-                    <th>Hostname</th>
-                    <th>Driver status</th>
-                    <th>Uptime</th>
-                    <th>Time since last offer</th>
-                </tr>
-            </thead>
-            <tbody>
-                {{#eachWithFn state.hostStates}}
+        {{#if requests.length}}
+            <table class="table" data-sortable>
+                <thead>
                     <tr>
-                        <td>{{#hardBreak hostname}}{{/hardBreak}}</td>
-                        <td>{{ driverStatusHuman }}</td>
-                        <td data-value="{{ uptime }}">{{ uptimeHuman }}</td>
-                        <td data-value="{{ millisSinceLastOffer }}">{{ millisSinceLastOfferHuman }}</td>
+                        <th data-sortable="false"></th>
+                        <th>Request</th>
+                        <th>Requested</th>
+                        <th>Deploy User</th>
+                        <th>Instances</th>
                     </tr>
-                {{/eachWithFn}}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    {{#eachWithFn requests}}
+                        <tr data-request-id="{{ id }}">
+                            <td><a class="star" data-request-id="{{ id }}" data-action="unstar" data-starred="true">★</a></td>
+                            <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak id}}{{/hardBreak}}</a></span></td>
+                            <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
+                            <td>{{ deployUser }}</td>
+                            <td>{{ instances }}</td>
+                        </tr>
+                    {{/eachWithFn}}
+                </tbody>
+            </table>
+        {{else}}
+            <center><p>No starred requests.</p></center>
+        {{/if}}
     </div>
 </section>
 
-<section>
-    <div class="page-header">
-        <h1>Requests</h1>
-    </div>
-    <div class="row-fluid">
-        <div class="span3">
-            <a class="big-number-link" href="/singularity/requests" data-route="requests">
-                <div class="well">
-                    <div class="big-number">
-                        <div class="number" data-state-attribute="requests">{{ state.requests }}</div>
-                        <div class="number-label">Active</div>
-                    </div>
-                </div>
-            </a>
+{{#if requestsNotFound.length}}
+    <section>
+        <div class="page-header">
+            <h1>Starred Non-active Requests</h1>
         </div>
-        <div class="span3">
-            <a class="big-number-link" href="/singularity/requests/paused" data-route="requests/paused">
-                <div class="well">
-                    <div class="big-number">
-                        <div class="number" data-state-attribute="pausedRequests">{{ state.pausedRequests }}</div>
-                        <div class="number-label">Paused</div>
-                    </div>
-                </div>
-            </a>
+        <div class="row-fluid">
+            <table class="table" data-sortable>
+                <thead>
+                    <tr>
+                        <th data-sortable="false"></th>
+                        <th>Request</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {{#eachWithFn requestsNotFound}}
+                        <tr data-request-id="{{ id }}">
+                            <td><a class="star" data-request-id="{{ id }}" data-action="unstar" data-starred="true">★</a></td>
+                            <td>{{#hardBreak id}}{{/hardBreak}}</td>
+                        </tr>
+                    {{/eachWithFn}}
+                </tbody>
+            </table>
         </div>
-        <div class="span3">
-            <a class="big-number-link" href="/singularity/requests/pending" data-route="requests/pending">
-                <div class="well">
-                    <div class="big-number">
-                        <div class="number" data-state-attribute="pendingRequests">{{ state.pendingRequests }}</div>
-                        <div class="number-label">Pending</div>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="span3">
-            <a class="big-number-link" href="/singularity/requests/cleaning" data-route="requests/cleaning">
-                <div class="well">
-                    <div class="big-number">
-                        <div class="number" data-state-attribute="cleaningRequests">{{ state.cleaningRequests }}</div>
-                        <div class="number-label">Cleaning</div>
-                    </div>
-                </div>
-            </a>
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="page-header">
-        <h1>Tasks</h1>
-    </div>
-    <div class="row-fluid">
-        <div class="span3">
-            <a class="big-number-link" href="/singularity/tasks" data-route="tasks">
-                <div class="well">
-                    <div class="big-number">
-                        <div class="number" data-state-attribute="activeTasks">{{ state.activeTasks }}</div>
-                        <div class="number-label">Active</div>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="span3">
-            <a class="big-number-link" href="/singularity/tasks/scheduled" data-route="tasks/scheduled">
-                <div class="well">
-                    <div class="big-number">
-                        <div class="number" data-state-attribute="lateTasks">{{ state.lateTasks }}</div>
-                        <div class="number-label">Overdue</div>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="span3">
-            <a class="big-number-link" href="/singularity/tasks/scheduled" data-route="tasks/scheduled">
-                <div class="well">
-                    <div class="big-number">
-                        <div class="number" data-state-attribute="futureTasks">{{ state.futureTasks }}</div>
-                        <div class="number-label">Future</div>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="span3">
-            <a class="big-number-link" href="/singularity/tasks/cleaning" data-route="tasks/cleaning">
-                <div class="well">
-                    <div class="big-number">
-                        <div class="number" data-state-attribute="cleaningTasks">{{ state.cleaningTasks }}</div>
-                        <div class="number-label">Cleaning</div>
-                    </div>
-                </div>
-            </a>
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="page-header">
-        <h1>Racks</h1>
-    </div>
-    <div class="row-fluid">
-        <div class="span4">
-            <a class="big-number-link" href="/singularity/racks" data-route="racks">
-                <div class="well">
-                    <div class="big-number">
-                        <div class="number" data-state-attribute="activeRacks">{{ state.activeRacks }}</div>
-                        <div class="number-label">Active</div>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="span4">
-            <a class="big-number-link" href="/singularity/racks" data-route="racks">
-                <div class="well">
-                    <div class="big-number">
-                        <div class="number" data-state-attribute="deadRacks">{{ state.deadRacks }}</div>
-                        <div class="number-label">Dead</div>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="span4">
-            <a class="big-number-link" href="/singularity/racks" data-route="racks">
-                <div class="well">
-                    <div class="big-number">
-                        <div class="number" data-state-attribute="decomissioningRacks">{{ state.decomissioningRacks }}</div>
-                        <div class="number-label">Decomissioning</div>
-                    </div>
-                </div>
-            </a>
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="page-header">
-        <h1>Slaves</h1>
-    </div>
-    <div class="row-fluid">
-        <div class="span4">
-            <a class="big-number-link" href="/singularity/slaves" data-route="slaves">
-                <div class="well">
-                    <div class="big-number">
-                        <div class="number" data-state-attribute="activeSlaves">{{ state.activeSlaves }}</div>
-                        <div class="number-label">Active</div>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="span4">
-            <a class="big-number-link" href="/singularity/slaves" data-route="slaves">
-                <div class="well">
-                    <div class="big-number">
-                        <div class="number" data-state-attribute="deadSlaves">{{ state.deadSlaves }}</div>
-                        <div class="number-label">Dead</div>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="span4">
-            <a class="big-number-link" href="/singularity/slaves" data-route="slaves">
-                <div class="well">
-                    <div class="big-number">
-                        <div class="number" data-state-attribute="decomissioningSlaves">{{ state.decomissioningSlaves }}</div>
-                        <div class="number-label">Decomissioning</div>
-                    </div>
-                </div>
-            </a>
-        </div>
-    </div>
-</section>
+    </section>
+{{/if}}
