--- a/SingularityUI/app/styles/ellipsize.styl
+++ b/SingularityUI/app/styles/ellipsize.styl
@@ -6,7 +6,7 @@
         overflow ellipsis
         max-width 330px
         display inline-block
-        line-height 10px
+        line-height 1
 
         wbr
             display none
