--- a/SingularityUI/app/views/templates/requestsPaused.hbs
+++ b/SingularityUI/app/views/templates/requestsPaused.hbs
@@ -5,7 +5,7 @@
 <section>
     <div class="row-fluid">
         <div class="span12">
-            <ul class="nav nav-tabs">
+            <ul class="nav nav-pills">
                 <li>
                     <a href="/singularity/requests" data-route="requests">Active</a>
                 </li>
