--- a/SingularityUI/app/views/templates/tasksActive.hbs
+++ b/SingularityUI/app/views/templates/tasksActive.hbs
@@ -5,7 +5,7 @@
 <section>
     <div class="row-fluid">
         <div class="span12">
-            <ul class="nav nav-tabs">
+            <ul class="nav nav-pills">
                 <li class="active">
                     <a href="/singularity/tasks" data-route="tasks">Active</a>
                 </li>
