--- a/SingularityUI/app/views/templates/requestsActive.hbs
+++ b/SingularityUI/app/views/templates/requestsActive.hbs
@@ -50,7 +50,7 @@
                     <tbody>
                         {{#eachWithFn requests}}
                             <tr data-request-id="{{ id }}">
-                                <td><a class="star" data-action="starToggle" data-starred="{{ starred }}" data-request-id="{{ id }}">★</a></td>
+                                <td><a class="star" data-action="starToggle" data-starred="{{ starred }}" data-request-id="{{ id }}" data-request-name="{{ name }}">★</a></td>
                                 <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
                                 <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
                                 <td>{{ deployUser }}</td>
@@ -91,7 +91,7 @@
                     <tbody>
                         {{#eachWithFn requestsScheduled}}
                             <tr data-request-id="{{ id }}">
-                                <td><a class="star" data-action="starToggle" data-starred="{{ starred }}" data-request-id="{{ id }}">★</a></td>
+                                <td><a class="star" data-action="starToggle" data-starred="{{ starred }}" data-request-id="{{ id }}" data-request-name="{{ name }}">★</a></td>
                                 <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
                                 <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
                                 <td>{{ deployUser }}</td>
